[package]
name = "croplet"
description = "Scanned booklet pages reorganizer"
version = "0.1.2"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
error-chain = "0.12"
image = "0.23"
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.5"
